--- a/Pages/NewPersonal.razor
+++ b/Pages/NewPersonal.razor
@@ -1,6 +1,7 @@
 @page "/newPersonal"
 @using Microsoft.Extensions.Logging
 @using LifeCenter.Entities
+@using LifeCenter.Services
 @inject ILogger<NewPersonal> Logger
 
 <EditForm Model="@personal" OnValidSubmit="@HandleSubmit" class="container columns is-multiline is-primary">
@@ -54,7 +55,7 @@
             <ValidationMessage For="@(() => personal.Email)" />
         </p>
     </label>
-    <label class="column is-one-third">
+    <label class="column is-3">
         <p class="mb-2"> Telefono </p>
         <p class="control has-icons-left">
             <InputNumber @bind-Value="personal.Phone" class="input"  placeholder="123-456-7890"/>
@@ -62,6 +63,12 @@
                 <i class="fa-solid fa-phone"></i>
             </span>
             <ValidationMessage For="@(() => personal.Phone)" />
+        </p>
+    </label>
+    <label class="column is-1">
+        <p class="mb-2"> Extension </p>
+        <p class="control">
+            <InputNumber @bind-Value="personal.Extension" class="input"  placeholder="123"/>
         </p>
     </label>
     <label class="column is-one-third">
@@ -102,13 +109,14 @@
 
 @code {
     private Personal personal = new();
-
-    private void HandleSubmit()
+    private PersonalService service = new PersonalService(context);
+    async private void HandleSubmit()
     {
         Logger.LogInformation("HandleSubmit called");
         personal.FechaModificado = DateTime.Now;
         personal.FechaCreado = DateTime.Now;
         Logger.LogInformation("Usuario: {Parameter1}", personal.Stringify());
+        await service.Create(personal);
         // Process the form
     }
 }
