--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bulma/css/bulma.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="LifeCenter.styles.css" rel="stylesheet" />
